@@ -449,11 +449,49 @@ that the page effect will last when changing pages. Drag the slider to
 adjust the number of seconds.
 
 <P ALIGN=CENTER><IMG SRC="htmldoc-fig79.png">
-<BR>Figure 7-9 - The Options Tab
+<BR>Figure 7-9 - The Security Tab
+
+<H2>The Security Tab</H2>
+
+<P>The security tab (Figure 7-9) allows you to enable PDF document encryption
+and security features.
+
+<H3>Encryption</H3>
+
+<P>The <VAR>Encryption</VAR> buttons control whether or not encryption is
+performed on the PDF file. Encrypted documents can be password protected and
+also provide user permissions.
+
+<H3>Permissions</H3>
+
+<P>The <VAR>Permissions</VAR> buttons control what operations are allowed by
+the PDF viewer.
+
+<H3>Owner Password</H3>
+
+<P>The <VAR>Owner Password</VAR> field contains the document owner password,
+a string that is used by Adobe Acrobat to control who can change document
+permissions, etc.
+
+<P>If this field is left blank, a random 32-character password is generated
+so that noone can change the document using the Adobe tools.
+
+<H3>User Password</H3>
+
+<P>The <VAR>User Password</VAR> field contains the document user password,
+a string that is used by Adobe Acrobat to restrict viewing permissions on
+the file.
+
+<P>If this field is left blank, any user may view the document without entering
+a password.
+
+
+<P ALIGN=CENTER><IMG SRC="htmldoc-fig7a.png">
+<BR>Figure 7-10 - The Options Tab
 
 <H2>The Options Tab</H2>
 
-The options tab (Figure 7-9) contains the HTML file editor of your
+The options tab (Figure 7-10) contains the HTML file editor of your
 choice and allows you to save the settings and options that will be
 used in new documents.
 
@@ -485,12 +523,12 @@ and all of the document settings on the other tabs for use in new
 documents. These settings are also used by the command-line version of
 <I>HTMLDOC</I>.
 
-<P ALIGN=CENTER><IMG SRC="htmldoc-fig7a.png">
-<BR>Figure 7-10 - The File Chooser
+<P ALIGN=CENTER><IMG SRC="htmldoc-fig7b.png">
+<BR>Figure 7-11 - The File Chooser
 
 <H2><A NAME="FILECHOOSER">The File Chooser</A></H2>
 
-The file chooser (Figure 7-10) allows you to select one or more files and
+The file chooser (Figure 7-11) allows you to select one or more files and
 create files and directories.
 
 <H3>Directory</H3>
